crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__comments_pane_flat_lists_every_comment_with_no_headers.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" Files                           Diff                                                      Comments (3) · flat list     "
" ▾ src                    +1 -1  modified  src/lib.rs · 1 comment             +1 -1 █████ ▌○ reviewer lib.rs:2          "
"▌  ● lib.rs ·1            +1 -1  answer                                                   ▌ why 42?                     "
" + ci.yml                 +1 -0  @@ -1,3 +1,3 @@                                                                        "
" ○ todo.md ·1             +1 -0     1    1 pub fn answer() -> u32 {                        ○ alice needs a date         "
"                                ▌   2          41                                          ✓ alice already fixed        "
"                                ▌        2     42                                                                       "
"                                  ▌ reviewer · open                                                                     "
"                                  ▌ why 42?                                                                             "
"                                  ▌                                                                                     "
"                                    3    3 }                                                                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/3 files                                                                        "
