crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__comments_pane_grouped_by_file_renders_a_header_per_file.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" Files                           Diff                                                      Comments (3) · by file       "
" ▾ src                    +1 -1  modified  src/lib.rs · 1 comment             +1 -1 █████  ▾ src/lib.rs (1)             "
"▌  ● lib.rs ·1            +1 -1  answer                                                                                 "
" + ci.yml                 +1 -0  @@ -1,3 +1,3 @@                                          ▌○ reviewer lib.rs:2          "
" ○ todo.md ·1             +1 -0     1    1 pub fn answer() -> u32 {                       ▌ why 42?                     "
"                                ▌   2          41                                                                       "
"                                ▌        2     42                                          ▾ todo.md (2)                "
"                                  ▌ reviewer · open                                                                     "
"                                  ▌ why 42?                                                ○ alice needs a date         "
"                                  ▌                                                                                     "
"                                    3    3 }                                               ✓ alice already fixed        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/3 files                                                      comments: by file "
