crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__comments_pane_grouped_by_status_starts_resolved_folded.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" Files                           Diff                                                      Comments (3) · by status     "
" ▾ src                    +1 -1  modified  src/lib.rs · 1 comment             +1 -1 █████  ▾ Open (2)                   "
"▌  ● lib.rs ·1            +1 -1  answer                                                   ▌  ○ reviewer lib.rs:2        "
" + ci.yml                 +1 -0  @@ -1,3 +1,3 @@                                          ▌   why 42?                   "
" ○ todo.md ·1             +1 -0     1    1 pub fn answer() -> u32 {                                                     "
"                                ▌   2          41                                            ○ alice needs a date       "
"                                ▌        2     42                                                                       "
"                                  ▌ reviewer · open                                        ▸ Resolved (1)               "
"                                  ▌ why 42?                                                                             "
"                                  ▌                                                                                     "
"                                    3    3 }                                                                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/3 files                                                    comments: by status "
