crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__commit_diff_opened_from_the_log_renders.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c comment · r reply · v viewed · C comments · ? help                                                                   "
" Files                           Diff                                                                                   "
" ▾ src                           new file  notes.txt                                                         +1 -0 █████"
"   + lib.rs               +3 -0  @@ -0,0 +1,1 @@                                                                        "
"▌+ notes.txt              +1 -0 ▌        1 alpha                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/2 files                                                                        "
