crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__diff_algorithm_picker_switches_the_algorithm_live.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" Files                           Diff                                                                                   "
" ▾ src                    +1 -1  new file  ci.yml                                                            +1 -0 █████"
"   ● lib.rs               +1 -1  @@ -0,0 +1,1 @@                                                                        "
"▌+ ci.yml                 +1 -0 ▌        1 on: push                                                                     "
" ○ todo.md                +1 -0                                                                                         "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                  Diff algorithm ──────────────────────────────────────                                 "
"                                  >                                                                                     "
"                                  myers                                                                                 "
"                                  minimal                                                                               "
"                                  patience                                                                              "
"                                  histogram                                                                             "
"                                  structural                                                                            "
"                                  enter apply · j/k move · tab filter · q close                                         "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/3 files                                                                        "
